[tool.poetry]
name = "ddd-package"
version = "0.1.0"
description = ""
authors = ["Jae hyeon <wjs2063@naver.com>"]
readme = "README.md"
packages = [{include = "ddd_package"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.8"
pydantic = "^2.10.6"
pytest = "^8.3.4"
black = "^25.1.0"
mypy = "^1.15.0"
pylint = "^3.3.4"
tortoise-orm = "^0.24.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
